did some css and squashed a bug

--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 form {
    margin: 0 auto;
    text-align: center;
-   margin-bottom: 10px;
+   margin-bottom: 1vh;
  }
 
 h1 {
@@ -26,12 +26,41 @@ h1 {
   text-align: center;
 }
 
-.DisplayResults {
+.all-results {
+  margin: 10vh auto 0 auto;
+}
+
+.result-container {
+  margin: auto;
+  width: 100vw;
+  display: flex;
+  justify-content: space-around;
+}
+
+.best-container {
+  margin: 10vh auto 0 auto;
+  width: 100vw;
+  height: auto;
+  display: flex;
+  justify-content: space-around;
+}
+
+.both-results {
   color: white;
-  font-weight: bold;
-  padding: 2%;
+  font-size: 2rem;
+  text-align: center;
   background: blue;
-  margin: 0 auto;
-  margin-top: 5px;
+  height: 15vw;
+  width: 25vw;
+  border-radius: 10px;
+}
+
+.best-route {
+  color: white;
+  font-size: 2rem;
+  text-align: center;
+  background: blue;
+  height: 20vh;
+  width: 20vw;
   border-radius: 10px;
 }
